--- a/portfolio.css
+++ b/portfolio.css
@@ -214,8 +214,14 @@ label {
     margin-top: 10px;
 }
 
+.message {
+    width: 570px;
+    height: 200px;
+}
+
 textarea {
     width: 570px;
+    height: 150px;
     border-radius: 5px;
     margin-top: 10px;
 }
@@ -225,7 +231,8 @@ button {
     height: 50px;
     border-radius: 5px;
     background-color: dodgerblue;
-    color: white
+    color: white;
+    margin-top: 20px;
 }
 
 
