--- a/portfolio.css
+++ b/portfolio.css
@@ -164,6 +164,9 @@ span {
 
 #container-1 {
     background-color: blueviolet;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #container-2 {
@@ -179,7 +182,109 @@ span {
 }
 
 #container-5 {
-    background-color: seagreen;
+    background-color: ;
+}
+
+.slideshow-container {
+    height: calc(82vh - 117px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slideshow {
+    position: relative;
+    width: 1200px;
+    height: 562.5px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.slides {
+    width: 300%;
+    height: 562.5px;
+    display: flex;
+}
+
+.slides input {
+    display: none;
+}
+
+.slide {
+    transition: 0.5s;
+}
+
+.slide img {
+    width: 1200px;
+    height: 562.5px;
+}
+
+.navigation-manual {
+    position: absolute;
+    width: 1200px;
+    margin-top: -50px;
+    display: flex;
+    justify-content: center;
+}
+
+.manual-btn {
+    width: 25px;
+    height: 25px;
+    border: 2px solid white;
+    padding: 5px;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.manual-btn:not(:last-child) {
+    margin-right: 40px;
+}
+
+.manual-btn:hover{
+    background: white;
+}
+
+#radio1:checked ~ .first {
+    margin-left: 0;
+}
+
+#radio2:checked ~ .first {
+    margin-left: -1200px;
+}
+
+#radio3:checked ~ .first {
+    margin-left: -2400px;
+}
+
+.navigation-auto {
+    position: absolute;
+    top: 512.5px;
+    width: 1200px;
+    display: flex;
+    justify-content: center;
+}
+
+.navigation-auto div {
+    width: 25px;
+    height: 25px;
+    border: 2px solid white;
+    padding: 5px;
+    border-radius: 50px;
+    transition: 0.5s;
+    margin-right: 40px;
+}
+
+#radio1:checked ~ .navigation-auto .auto-btn1 {
+    background: white;
+}
+
+#radio2:checked ~ .navigation-auto .auto-btn2 {
+    background: white;
+}
+
+#radio3:checked ~ .navigation-auto .auto-btn3 {
+    background: white;
 }
 
 #container-6 {
