Alimentation en contenu / organisation des parties "Accueil" et "Qui suis-je ?"

--- a/portfolio.css
+++ b/portfolio.css
@@ -14,7 +14,7 @@ body {
 .navbar {
     width: 100%;
     height: 18vh;
-    background-color: red;
+    background-color: ;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -26,6 +26,7 @@ body {
     font-size: 33px;
     color: white;
 }
+
 .navbar .right {
     width: 140px;
     height: 100px;
@@ -162,15 +163,31 @@ span {
     padding: 45px;
 }
 
+.content {
+    height: calc(82vh - 117px);
+    display: flex;
+}
+
 #container-1 {
-    background-color: blueviolet;
+    background-color: ;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 #container-2 {
-    background-color: orangered;
+    background-color: ;
+}
+
+#photo {
+    width: 2000px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#photo img {
+    border-radius: 50%;
 }
 
 #container-3 {
